--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -1,11 +1,9 @@
 {
-  "packageDirectories": [
-    {
-      "path": "force-app",
-      "default": true
-    }
-  ],
-  "namespace": "",
-  "sfdcLoginUrl": "https://test.salesforce.com",
-  "sourceApiVersion": "42.0"
+    "packageDirectories": [{
+        "path": "force-app",
+        "default": true
+    }],
+    "namespace": "",
+    "sfdcLoginUrl": "https://login.salesforce.com",
+    "sourceApiVersion": "42.0"
 }
