Changed source folder

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -1,6 +1,6 @@
 {
     "packageDirectories": [{
-        "path": "force-app",
+        "path": "src",
         "default": true
     }],
     "namespace": "",
